--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "motion": "^12.29.2",
     "ogl": "^1.0.11",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-simple-chatbot": "^0.5.0",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
